sg.tf

resource "aws_security_group" "webserversg" {
  vpc_id = aws_vpc.webservervpc.id

  ingress {
    protocol  = "tcp"
    self      = true
    from_port = 443
    to_port   = 443
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
